<resources>
    <string name="app_name">Menu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="restaurant">麥當勞</string>
    <string name="name">姓名：</string>
    <string name="edit_name">輸入姓名</string>
    <string name="sex">性別：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="ingredients">配料：</string>
    <string name="cheese">起司</string>
    <string name="tomato">番茄</string>
    <string name="vegetables">生菜</string>
    <string name="search">搜尋</string>
    <string name="next">下一個</string>
    <string name="information">基本資料</string>
    <string name="all">全選</string>
    <string name="cancel">取消</string>

</resources>