<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9FBF96C"
    android:orientation="vertical">

    <TextView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/restaurant"
        android:textSize="50dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/gray"
            android:singleLine = "true"
            android:ellipsize="end"
            android:inputType="textAutoComplete"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sex"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />

        <RadioGroup
            android:id="@+id/sex_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/sex_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/sex_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/woman" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ingredients"
            android:textColor="@color/black"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cheese">

            </CheckBox>

            <CheckBox
                android:id="@+id/tomato"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tomato">

            </CheckBox>

            <CheckBox
                android:id="@+id/vegetables"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vegetables">

            </CheckBox>

            <Button
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/all" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/cancel" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/information"
        android:textColor="@color/black"

        />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/search"
        android:textSize="30dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:scaleType="centerInside">

    </ImageView>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/next"
        android:textSize="30dp"
        tools:ignore="SpUsage" />


</LinearLayout>